# clicker_prototype

./: Cargo.toml
src/: lib.rs  main.rs
src/game/: action.rs  character.rs  cycle.rs  entity.rs  events.rs  identifier.rs  mod.rs  resource.rs  resources.rs  state.rs
src/game_loop/: game_loop.rs
src/ui/: events.rs  mod.rs  ui.rs
src/ui/widget/: character.rs  ctrl_panel.rs  mod.rs  resource.rs  resources.rs  util.rs
