[package]
name = "clicker_prototype"
version = "0.1.0"
authors = ["Leah Roukema <leahroukema@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
approx = "0.1.1"

[dependencies.druid]
git = "https://github.com/linebender/druid.git"
features = ["im", "svg"]

[dependencies.druid-widget-nursery]
git = "https://github.com/linebender/druid-widget-nursery.git"